[gd_scene load_steps=35 format=3 uid="uid://b3ahuaqdf1c76"]

[ext_resource type="Script" path="res://Entities/Player/player.gd" id="1_owvpp"]
[ext_resource type="Texture2D" uid="uid://p0u7c321ol1n" path="res://Assets/Sprites/player_animation_fin.png" id="2_xr8lj"]
[ext_resource type="Texture2D" uid="uid://cgqsjb247egol" path="res://Assets/Images/shadow.png" id="3_r8fok"]
[ext_resource type="Script" path="res://Entities/Player/player_state_machine.gd" id="4_nhbkt"]
[ext_resource type="Script" path="res://Entities/Player/player_state_idle.gd" id="5_vskfa"]
[ext_resource type="Script" path="res://Entities/Player/player_state_walk.gd" id="6_pjcup"]
[ext_resource type="Script" path="res://Components/health_component.gd" id="6_xr8lj"]
[ext_resource type="Script" path="res://Entities/Player/player_state_attack.gd" id="7_0poeq"]
[ext_resource type="Script" path="res://Entities/Player/player_state_stun.gd" id="9_v7p16"]
[ext_resource type="Script" path="res://Components/hit_box_component.gd" id="11_owvpp"]
[ext_resource type="Script" path="res://Components/hurt_box_component.gd" id="12_xr8lj"]
[ext_resource type="Script" path="res://Entities/Player/camera.gd" id="13_01ng6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qlg0r"]
size = Vector2(12, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_tt651"]
radius = 6.0

[sub_resource type="Animation" id="Animation_g2els"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ur7pv"]
resource_name = "attack_down"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_d2wvv"]
resource_name = "attack_side"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_y4r1p"]
resource_name = "attack_up"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_qhqgy"]
resource_name = "idle_down"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "idle_side"
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "idle_up"
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_uw7o4"]
resource_name = "stun_down"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_gallu"]
resource_name = "stun_side"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_061yh"]
resource_name = "stun_up"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "walk_down"
length = 0.3
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "walk_side"
length = 0.15
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 6]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "walk_up"
length = 0.3
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqkch"]
_data = {
"RESET": SubResource("Animation_g2els"),
"attack_down": SubResource("Animation_ur7pv"),
"attack_side": SubResource("Animation_d2wvv"),
"attack_up": SubResource("Animation_y4r1p"),
"idle_down": SubResource("Animation_qhqgy"),
"idle_side": SubResource("Animation_dqkch"),
"idle_up": SubResource("Animation_qlg0r"),
"stun_down": SubResource("Animation_uw7o4"),
"stun_side": SubResource("Animation_gallu"),
"stun_up": SubResource("Animation_061yh"),
"walk_down": SubResource("Animation_tuyoq"),
"walk_side": SubResource("Animation_fjrip"),
"walk_up": SubResource("Animation_smehm")
}

[sub_resource type="Animation" id="Animation_hl213"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_samso"]
resource_name = "damaged"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0.0862745), Color(1, 1, 1, 1), Color(1, 1, 1, 0.258824), Color(1, 1, 1, 1), Color(1, 1, 1, 0.576471), Color(1, 1, 1, 1), Color(1, 1, 1, 0.827451), Color(1, 1, 1, 1), Color(1, 1, 1, 0.901961), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5m37j"]
_data = {
"RESET": SubResource("Animation_hl213"),
"damaged": SubResource("Animation_samso")
}

[sub_resource type="Resource" id="Resource_mytu1"]
metadata/__load_path__ = "res://Entities/Player/attack_sound.wav"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owvpp"]
size = Vector2(16, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_18o34"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "hit_box_component", "hurt_box_component")]
collision_mask = 20
motion_mode = 1
wall_min_slide_angle = 0.349066
script = ExtResource("1_owvpp")
health_component = NodePath("HealthComponent")
hit_box_component = NodePath("HitBoxComponent")
hurt_box_component = NodePath("PlayerInteraction/HurtBoxComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qlg0r")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -13)
texture = ExtResource("2_xr8lj")
hframes = 23

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0.201527, 0.201527, 0.201527, 1)
self_modulate = Color(0.756863, 0.756863, 0.756863, 0.360784)
show_behind_parent = true
position = Vector2(0, 17)
texture = ExtResource("3_r8fok")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("6_xr8lj")

[node name="HitBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_mask = 0
script = ExtResource("11_owvpp")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_tt651")
debug_color = Color(0.248101, 0.629003, 0.270915, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dqkch")
}

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5m37j")
}

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("4_nhbkt")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_vskfa")

[node name="Walk" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_pjcup")

[node name="Attack" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("hurt_box_component")]
script = ExtResource("7_0poeq")
hurt_box_component = NodePath("../../PlayerInteraction/HurtBoxComponent")
_attack_sound = SubResource("Resource_mytu1")

[node name="Stun" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("hit_box_component")]
script = ExtResource("9_v7p16")
hit_box_component = NodePath("../../HitBoxComponent")

[node name="Audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
max_polyphony = 4

[node name="PlayerInteraction" type="Node2D" parent="."]
position = Vector2(0, -5)

[node name="InteractionBox" type="Area2D" parent="PlayerInteraction"]
position = Vector2(0, 8)
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInteraction/InteractionBox"]
shape = SubResource("RectangleShape2D_owvpp")
debug_color = Color(0.731083, 0.472636, 0, 0.42)

[node name="HurtBoxComponent" type="Area2D" parent="PlayerInteraction"]
position = Vector2(0, 5)
collision_layer = 0
collision_mask = 256
script = ExtResource("12_xr8lj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInteraction/HurtBoxComponent"]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_18o34")
debug_color = Color(0.985228, 0.119419, 9.62615e-07, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
script = ExtResource("13_01ng6")
